5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1644_1053.log
== TEST (2019-04-05 00:52:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome:")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome",nao eh patrono do Harry Potter"

print(mensagem)
-- ERROR:
File "XXXX", line 9
    mensagem = nome",nao eh patrono do Harry Potter"
                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:52:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome:")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome,"nao eh patrono do Harry Potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:52:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome:")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome,"nao eh patrono do Harry Potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 00:52:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome:")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome,"nao eh patrono do Harry Potter"

print(mensagem)
-- EXECUTION TIME:
0.14068
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', 'nao eh patrono do Harry Potter')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:53:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome:")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome+"nao eh patrono do Harry Potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 00:53:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome:")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome+" "+"nao eh patrono do Harry Potter"

print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 00:53:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
nome = input("nome:")

if (nome == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = nome+" "+"nao eh patrono do Harry Potter"

print(mensagem)
-- EXECUTION TIME:
0.153714
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
